# multi-agent-langgraph-xp

./: .gitignore  README.md  langgraph.json  pyproject.toml
src/: compiled_graphs.py
src/agents/: calendar_agent.py  email_agent.py  memory_agent.py
src/bigtool_agent/: bigtool_agent.py
src/model/: embedding.py  model.py
src/procedural_memory/: improving_email_agent.py
src/supervisor_agents/: configuration_supervisor.py  supervisor_architecture_orchestration.py
src/swarm_agents/: configuration_swarm.py  state.py  swarm_agent_orchestration.py
src/tools/: tools.py
tests/: eval_email.py
