[project]
name = "copilot-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langchain-openai (>=0.3.10,<0.4.0)",
    "langchain-ollama (>=0.3.0,<0.4.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "langchain[openai] (>=0.3.23,<0.4.0)",
    "langgraph-cli[inmem] (>=0.1.80,<0.2.0)",
    "langmem (>=0.0.17,<0.0.18)",
    "numpy (>=2.2.4,<3.0.0)",
    "langgraph-swarm (>=0.0.8,<0.1.0)",  # Added langgraph-swarm dependency
    "langgraph (>=0.3.21,<0.4.0)",
    "langgraph-prebuilt (>=0.1.7,<0.2.0)",
    "langgraph-supervisor (>=0.0.16,<0.0.17)",
    "langgraph-bigtool (>=0.0.2,<0.0.3)",
    "agentevals (>=0.0.5,<0.0.6)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
